add_executable(eventloop_unittest EventLoop_unittest.cc)
target_link_libraries(eventloop_unittest net_lib)
add_test(NAME eventloop_unittest COMMAND eventloop_unittest)

add_executable(inetaddress_unittest InetAddress_unittest.cc)
target_link_libraries(inetaddress_unittest net_lib)
add_test(NAME inetaddress_unittest COMMAND inetaddress_unittest)