add_executable(eventloop_unittest EventLoop_unittest.cc)
target_link_libraries(eventloop_unittest net_lib)
add_test(NAME eventloop_unittest COMMAND eventloop_unittest)

add_executable(inetaddress_unittest InetAddress_unittest.cc)
target_link_libraries(inetaddress_unittest net_lib)
add_test(NAME inetaddress_unittest COMMAND inetaddress_unittest)

add_executable(buffer_unittest Buffer_unittest.cc)
target_link_libraries(buffer_unittest net_lib)
add_test(NAME buffer_unittest COMMAND buffer_unittest)

add_executable(eventloopthread_unittest EventLoopThread_unittest.cc)
target_link_libraries(eventloopthread_unittest net_lib)

add_executable(acceptor_unittest Acceptor_unittest.cc)
target_link_libraries(acceptor_unittest net_lib)