add_executable(eventloop_unittest EventLoop_unittest.cc)
target_link_libraries(eventloop_unittest net_lib)
add_test(NAME eventloop_unittest COMMAND eventloop_unittest)

add_executable(inetaddress_unittest InetAddress_unittest.cc)
target_link_libraries(inetaddress_unittest net_lib)
add_test(NAME inetaddress_unittest COMMAND inetaddress_unittest)

add_executable(buffer_unittest Buffer_unittest.cc)
target_link_libraries(buffer_unittest net_lib)
add_test(NAME buffer_unittest COMMAND buffer_unittest)

add_executable(eventloopthread_unittest EventLoopThread_unittest.cc)
target_link_libraries(eventloopthread_unittest net_lib)

add_executable(acceptor_unittest Acceptor_unittest.cc)
target_link_libraries(acceptor_unittest net_lib)

add_executable(tcpserver_unittest Tcpserver_unittest.cc)
target_link_libraries(tcpserver_unittest net_lib)

add_executable(echoserver_unittest Echoserver_unittest.cc)
target_link_libraries(echoserver_unittest net_lib)

add_executable(connector_unittest Connector_unittest.cc)
target_link_libraries(connector_unittest net_lib)